<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.rssfeeder.views.login.ui.login.RegisterFragment"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_16"
        android:gravity="center">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textSize="@dimen/size_30sp"
            android:textStyle="bold|italic"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_name"
                android:inputType="text|textCapSentences"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_phone"
                android:inputType="phone"
                android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_email"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_string_register"
            android:layout_marginBottom="@dimen/padding_margin_8"
            android:layout_marginTop="@dimen/padding_margin_8"/>

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_string_cancel"/>
</LinearLayout>