<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_margin_16"
        android:orientation="vertical"
        android:gravity="center">

    <ImageView android:layout_width="@dimen/login_screen_icon_hw"
               android:layout_height="@dimen/login_screen_icon_hw"
               android:src="@drawable/ic_apple_music"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_email"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login_title"
            android:layout_marginBottom="@dimen/padding_margin_8"
            android:layout_marginTop="@dimen/padding_margin_8"/>

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_string_register"/>

</LinearLayout>
